--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "prepare": "husky install",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "prepare": "husky install"
   },
   "dependencies": {
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "pinia": "^2.1.4",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
@@ -34,6 +35,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^8.0.3",
     "vue-cli-plugin-axios": "~0.0.4",
+    "vue-cli-plugin-pinia": "~0.2.4",
     "vue-cli-plugin-tailwind": "~3.0.0"
   },
   "eslintConfig": {
